--- a/week14/week14_assignment.ipynb
+++ b/week14/week14_assignment.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "(193862, 60)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -359,16 +359,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fde5c02ec88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f86439ec978>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -452,19 +452,18 @@
      "output_type": "stream",
      "text": [
       "Already up to date.\n",
-      "[main 50abe87] Submitting the week 14 programming assignment\n",
-      " 2 files changed, 533 insertions(+), 4 deletions(-)\n",
-      " create mode 100644 week14/week14_assignment.ipynb\n",
-      "Counting objects: 6, done.\n",
+      "[main d1b307e] Submitting the week 14 programming assignment\n",
+      " 1 file changed, 78 insertions(+), 52 deletions(-)\n",
+      "Counting objects: 4, done.\n",
       "Delta compression using up to 2 threads.\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 5.35 KiB | 5.35 MiB/s, done.\n",
-      "Total 6 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 7.22 KiB | 7.22 MiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "remote: This repository moved. Please use the new location:\u001b[K\n",
       "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
       "To github.com:sairupesh24/hds5210-2022.git\n",
-      "   53609d4..50abe87  main -> main\n"
+      "   50abe87..d1b307e  main -> main\n"
      ]
     }
    ],
